--- a/codecov.yml
+++ b/codecov.yml
@@ -1,5 +1,5 @@
-# codecov:
-#   bot: opg-use-an-lpa
+codecov:
+  bot: opg-use-an-lpa
 comment:
   layout: "reach, diff, flags, files"
   behavior: default
