--- a/codecov.yml
+++ b/codecov.yml
@@ -1,9 +1,11 @@
-# codecov:
+codecov:
+  strict_yaml_branch:
+  require_ci_to_pass: false
 #   bot: opg-use-an-lpa
 comment:
   layout: "reach, diff, flags, files"
   behavior: default
-  require_changes: false  # if true: only post the comment if coverage changes
+  require_changes: true  # if true: only post the comment if coverage changes
 coverage:
   status:
     patch:
@@ -13,7 +15,7 @@ coverage:
         if_no_uploads: error
         if_not_found: success
         target: auto
-        threshold: 5.0
+        threshold: 5%
     project:
       default:
         target: 80%    # our target PR coverage to be successful
@@ -26,8 +28,7 @@ coverage:
         paths:
         - ^service-api/app/src/App/src.*
         target: auto
-        threshold: 5.0
-      default: false
+        threshold: 5%
       front:
         base: pr
         if_ci_failed: error
@@ -36,7 +37,7 @@ coverage:
         paths:
         - ^service-front/app/src.*
         target: auto
-        threshold: 5.0
+        threshold: 5%
       pdf:
         base: pr
         if_ci_failed: error
@@ -45,7 +46,7 @@ coverage:
         paths:
         - ^service-pdf/app/src.*
         target: auto
-        threshold: 5.0
+        threshold: 5%
       web:
         base: pr
         if_ci_failed: error
@@ -54,7 +55,7 @@ coverage:
         paths:
         - ^service-front/web/src.*
         target: auto
-        threshold: 5.0
+        threshold: 5%
       admin:
         base: pr
         if_ci_failed: error
@@ -63,4 +64,4 @@ coverage:
         paths:
         - ^service-admin/*
         target: auto
-        threshold: 5.0
+        threshold: 5%
