--- a/codecov.yml
+++ b/codecov.yml
@@ -1,11 +1,66 @@
 codecov:
-  bot: opg-use-an-lpa
-  comment:
-    layout: "reach, diff, flags, files"
-    behavior: default
-    require_changes: false  # if true: only post the comment if coverage changes
+  require_ci_to_pass: false
+#   bot: opg-use-an-lpa
+comment:
+  layout: "reach, diff, flags, files"
+  behavior: default
+  require_changes: true  # if true: only post the comment if coverage changes
+coverage:
   status:
+    patch:
+      default:
+        base: pr
+        if_ci_failed: error
+        if_no_uploads: error
+        if_not_found: success
+        target: auto
+        threshold: 5%
     project:
       default:
         target: 80%    # our target PR coverage to be successful
         threshold: 1%  # if PR drops coverage by less than % percent, but is still above the target, then successful.
+      api:
+        base: pr
+        if_ci_failed: error
+        if_no_uploads: error
+        if_not_found: success
+        paths:
+        - ^service-api/app/src/App/src.*
+        target: auto
+        threshold: 5%
+      front:
+        base: pr
+        if_ci_failed: error
+        if_no_uploads: error
+        if_not_found: success
+        paths:
+        - ^service-front/app/src.*
+        target: auto
+        threshold: 5%
+      pdf:
+        base: pr
+        if_ci_failed: error
+        if_no_uploads: error
+        if_not_found: success
+        paths:
+        - ^service-pdf/app/src.*
+        target: auto
+        threshold: 5%
+      web:
+        base: pr
+        if_ci_failed: error
+        if_no_uploads: error
+        if_not_found: success
+        paths:
+        - ^service-front/web/src.*
+        target: auto
+        threshold: 5%
+      admin:
+        base: pr
+        if_ci_failed: error
+        if_no_uploads: error
+        if_not_found: success
+        paths:
+        - ^service-admin/*
+        target: auto
+        threshold: 5%
