add workflow of last circleci workflow

--- a/.github/workflows/dependabot-approve-and-auto-merge_job.yml
+++ b/.github/workflows/dependabot-approve-and-auto-merge_job.yml
@@ -2,6 +2,8 @@ name: Dependabot Pull Request Approve and Merge
 
 on:
   workflow_run:
+    workflows:
+      ["ecr_scan_results"]
     types:
       - completed
 
