Uml 2540 dependabot to daily (#1733)
* change dependabot PRs daily

* remove incorrect comment

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,9 +5,8 @@ updates:
   - package-ecosystem: "npm"
     directory: "/service-front/web"
     schedule:
-      # Check for updates on the first of each month at 10am UTC
-      interval: "monthly"
-      time: "10:00"
+      interval: "daily"
+      time: "09:00"
       timezone: "Europe/London"
     versioning-strategy: lockfile-only
 
@@ -15,9 +14,8 @@ updates:
   - package-ecosystem: "npm"
     directory: "/service-pdf/app"
     schedule:
-      # Check for updates on the first of each month at 10am UTC
-      interval: "monthly"
-      time: "10:00"
+      interval: "daily"
+      time: "09:00"
       timezone: "Europe/London"
     versioning-strategy: lockfile-only
 
@@ -25,9 +23,8 @@ updates:
   - package-ecosystem: "composer"
     directory: "/service-front/app"
     schedule:
-      # Check for updates on the first of each month at 10am UTC
-      interval: "monthly"
-      time: "10:00"
+      interval: "daily"
+      time: "09:00"
       timezone: "Europe/London"
     versioning-strategy: lockfile-only
 
@@ -35,9 +32,8 @@ updates:
   - package-ecosystem: "composer"
     directory: "/service-api/app"
     schedule:
-      # Check for updates on the first of each month at 10am UTC
-      interval: "monthly"
-      time: "10:00"
+      interval: "daily"
+      time: "09:00"
       timezone: "Europe/London"
     versioning-strategy: lockfile-only
 
@@ -45,9 +41,8 @@ updates:
   - package-ecosystem: "composer"
     directory: "/tests/smoke"
     schedule:
-      # Check for updates on the first of each month at 10am UTC
-      interval: "monthly"
-      time: "10:00"
+      interval: "daily"
+      time: "09:00"
       timezone: "Europe/London"
     versioning-strategy: lockfile-only
 
@@ -55,32 +50,30 @@ updates:
   - package-ecosystem: "terraform"
     directory: "/terraform/account"
     schedule:
-      # Check for updates on the first of each month at 10am UTC
-      interval: "monthly"
-      time: "10:00"
+      interval: "daily"
+      time: "09:00"
       timezone: "Europe/London"
 
     # Enable version updates for environment terraform
   - package-ecosystem: "terraform"
     directory: "/terraform/environment"
     schedule:
-      # Check for updates on the first of each month at 10am UTC
-      interval: "monthly"
-      time: "10:00"
+      interval: "daily"
+      time: "09:00"
       timezone: "Europe/London"
 
     # Enable version updates for service-admin gomod
   - package-ecosystem: "gomod"
     directory: "/service-admin"
     schedule:
-      interval: "monthly"
-      time: "10:00"
+      interval: "daily"
+      time: "09:00"
       timezone: "Europe/London"
 
     # Enable version updates for service-admin docker
   - package-ecosystem: "docker"
     directory: "/service-admin"
     schedule:
-      interval: "monthly"
-      time: "10:00"
+      interval: "daily"
+      time: "09:00"
       timezone: "Europe/London"
