--- a/service-admin/.vscode/launch.json
+++ b/service-admin/.vscode/launch.json
@@ -16,7 +16,7 @@
                 "ADMIN_JWT_SIGNING_KEY_URL": "http://localhost:5000",
                 "AWS_ACCESS_KEY_ID": "-",
                 "AWS_SECRET_ACCESS_KEY": "-",
-                "ADMIN_LOGOUT_URL": "https://login-admin-lastingpowerofattorney.auth.eu-west-1.amazoncognito.com/logout"
+                "ADMIN_LOGOUT_URL": "https://login-admin-lastingpowerofattorney.auth.eu-west-1.amazoncognito.com/logout",
             }
         }
     ]
