--- a/service-api/app/composer.json
+++ b/service-api/app/composer.json
@@ -53,7 +53,8 @@
         "mezzio/mezzio-fastroute": "^3.0",
         "mezzio/mezzio-helpers": "^5.0",
         "laminas/laminas-stdlib": "^3.1",
-        "blazon/psr11-monolog": "^4.0"
+        "blazon/psr11-monolog": "^4.0",
+        "alphagov/notifications-php-client": "^4.1.0"
     },
     "require-dev": {
         "behat/behat": "^3.5",
