--- a/service-front/app/composer.json
+++ b/service-front/app/composer.json
@@ -70,6 +70,7 @@
         "laminas/laminas-development-mode": "^3.1",
         "mezzio/mezzio-tooling": "^1.0",
         "mikey179/vfsstream": "^1.6",
+        "phpspec/prophecy": "^1.15",
         "phpunit/phpunit": "^8.5",
         "roave/security-advisories": "dev-master",
         "squizlabs/php_codesniffer": "^3.0",
