--- a/service-api/app/composer.json
+++ b/service-api/app/composer.json
@@ -59,10 +59,11 @@
         "behat/behat": "^3.5",
         "cooperaj/behat-psr-extension": "^2.0",
         "filp/whoops": "^2.1.12",
-        "jshayes/fake-requests": "^2.3",
         "laminas/laminas-development-mode": "^3.1",
         "mezzio/mezzio-tooling": "^2.5",
-        "phpunit/phpunit": "^8.5",
+        "phpspec/prophecy": "^1.15",
+        "phpspec/prophecy-phpunit": "^2.0",
+        "phpunit/phpunit": "^9.5",
         "roave/security-advisories": "dev-master",
         "smart-gamma/pact-behat-extension": "^3.0",
         "squizlabs/php_codesniffer": "^3.0",
