--- a/service-front/app/composer.json
+++ b/service-front/app/composer.json
@@ -7,7 +7,8 @@
     "config": {
         "sort-packages": true,
         "allow-plugins": {
-            "laminas/laminas-component-installer": false
+            "laminas/laminas-component-installer": false,
+            "dealerdirect/phpcodesniffer-composer-installer": true
         }
     },
     "extra": {
@@ -66,6 +67,7 @@
         "behat/behat": "^3.6",
         "cooperaj/behat-psr-extension": "^2.0",
         "filp/whoops": "^2.1.12",
+        "laminas/laminas-coding-standard": "^2.4.0",
         "laminas/laminas-development-mode": "^3.1",
         "mezzio/mezzio-tooling": "^1.0",
         "mikey179/vfsstream": "^1.6",
