--- a/service-front/app/phpcs.xml.dist
+++ b/service-front/app/phpcs.xml.dist
@@ -1,27 +1,36 @@
 <?xml version="1.0"?>
-<ruleset name="Mezzio Skeleton coding standard">
-    <description>Mezzio Skeleton coding standard</description>
+    <ruleset xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:noNamespaceSchemaLocation="vendor/squizlabs/php_codesniffer/phpcs.xsd">
 
-    <config name="ignore_warnings_on_exit" value="1"/>
-
-    <!-- display progress -->
-    <arg value="p"/>
+    <arg name="basepath" value="."/>
+    <arg name="cache" value=".phpcs-cache"/>
     <arg name="colors"/>
+    <arg name="extensions" value="php"/>
+    <arg name="parallel" value="80"/>
 
-    <!-- inherit rules from: -->
-    <rule ref="PSR12"/>
-    <rule ref="Generic.Arrays.DisallowLongArraySyntax"/>
-    <rule ref="Squiz.WhiteSpace.SuperfluousWhitespace">
-        <properties>
-            <property name="ignoreBlankLines" value="false"/>
-        </properties>
-    </rule>
-    <rule ref="PSR1.Methods.CamelCapsMethodName">
-        <exclude-pattern>*/test/*</exclude-pattern>
-    </rule>
+    <!-- Show progress -->
+    <arg value="p"/>
 
     <!-- Paths to check -->
     <file>config</file>
     <file>src</file>
     <file>test</file>
+    <exclude-pattern>config/config.php</exclude-pattern>
+    <exclude-pattern>config/routes.php</exclude-pattern>
+
+    <!-- Include all rules from the Laminas Coding Standard -->
+    <rule ref="LaminasCodingStandard"/>
+
+    <rule ref="Squiz.Classes.ClassFileName.NoMatch">
+    <exclude-pattern>src/ConfigProvider.*.php</exclude-pattern>
+    </rule>
+
+    <rule ref="PSR12.Files.FileHeader.IncorrectOrder">
+    <exclude-pattern>config/pipeline.php</exclude-pattern>
+    <exclude-pattern>src/MezzioInstaller/Resources/config/routes-*.php</exclude-pattern>
+    </rule>
+
+    <rule ref="PSR1.Methods.CamelCapsMethodName">
+    <exclude-pattern>*/test/*</exclude-pattern>
+    </rule>
 </ruleset>
