--- a/.github/workflows/_build-and-push.yml
+++ b/.github/workflows/_build-and-push.yml
@@ -64,7 +64,7 @@ jobs:
       - name: cache node modules
         if: matrix.svc_prefix == 'front'
         id: cache-npm
-        uses: actions/cache@v3
+        uses: actions/cache@fd5de65bc895cf536527842281bea11763fefd77 # pin@v3.0.8
         env:
           cache-name: cache-node-modules
         with:
@@ -89,7 +89,7 @@ jobs:
           role-session-name: OPGUseAnLPAECRGithubAction
 
       - name: download artifact
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@fb598a63ae348fa914e94cd0ff38f362e927b741
         if: matrix.artifact_to_dl != ''
         with:
           name: ${{ matrix.artifact_to_dl }}
@@ -128,7 +128,6 @@ jobs:
           SVC_PREFIX: ${{ matrix.svc_prefix }}
         run: |
           if [ ${SVC_PREFIX} == "api" ]; then
-            ./scripts/pipeline/set_environment_variables/set_pact.sh
             docker run -d --rm --name lpa-codes-pact-mock pactfoundation/pact-cli:latest mock-service -p "80" --host "0.0.0.0" \
             --pact-dir /tmp/pacts --consumer use_a_lasting_power_of_attorney --provider lpa-codes
             docker run -d --rm --name api-gateway-pact-mock pactfoundation/pact-cli:latest mock-service -p "80" --host "0.0.0.0" \
@@ -159,13 +158,11 @@ jobs:
         run: |
           mkdir -p build/service-${SVC_PREFIX}
           docker cp tests:/app/build/reports build/service-${SVC_PREFIX}/phpunit
-          if [ ${SVC_PREFIX} == "front" ]; then
-            docker cp inttests:/app/build/reports build/service-${SVC_PREFIX}/behat
-          fi
+          docker cp inttests:/app/build/reports build/service-${SVC_PREFIX}/behat
 
       - name: archive test results
         if: matrix.svc_suffix == 'app'
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@3cea5372237819ed00197afe530f5a7ea3e805c8 # pin@v3.1.0
         with:
           name: service-${{ matrix.svc_prefix }}
           path: |
@@ -215,45 +212,3 @@ jobs:
             docker tag $IMAGE_NAME:latest $ECR_REGISTRY/$ECR_REGISTRY_ALIAS/$IMAGE_NAME:latest
           fi
             docker push --all-tags $ECR_REGISTRY/$ECR_REGISTRY_ALIAS/$IMAGE_NAME
-
-#      - name: Setup Python
-#        if: inputs.push_to_ecr == true
-#        uses: actions/setup-python@b55428b1882923874294fa556849718a1d7f2ca5 # pin@v4.2.0
-#        with:
-#          python-version: "3.9"
-#
-#      - name: Install Python dependencies
-#        if: inputs.push_to_ecr == true
-#        run: |
-#          python -m pip install --upgrade pip
-#          pip install -r scripts/pipeline/check_ecr_scan_results/requirements.txt
-#
-#      - name: Scan Container
-#        if: inputs.push_to_ecr == 'true'
-#        env:
-#          ECR_REGISTRY_ALIAS: online-lpa
-#          IMAGE_TAG: ${{ inputs.tag }}
-#        run: |
-#            cd scripts/pipeline/check_ecr_scan_results/
-#            python aws_ecr_scan_results.py --search ${ECR_REGISTRY_ALIAS} \
-#                                           --tag ${IMAGE_TAG} \
-#                                           --slack_channel blah \
-#                                           --slack_token ${{ secrets.SLACK_BOT_TOKEN }}
-
-# Replace with this?
-
-#      - name: Trivy Image Vulnerability Scanner
-#        id: trivy_scan
-#        uses: aquasecurity/trivy-action@0.5.0
-#        with:
-#          image-ref: ${{ matrix.lambda_name.name }}:latest
-#          severity: 'HIGH,CRITICAL'
-#          format: 'sarif'
-#          output: 'trivy-results.sarif'
-#
-#      - name: Upload Trivy scan results to GitHub Security tab
-#        id: trivy_upload_sarif
-#        uses: github/codeql-action/upload-sarif@v2
-#        if: always()
-#        with:
-#          sarif_file: 'trivy-results.sarif'
