--- a/.github/workflows/golang-linting.yml
+++ b/.github/workflows/golang-linting.yml
@@ -10,7 +10,7 @@ jobs:
     name: lint
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # pin@v3
       - uses: actions/setup-go@v3
         with:
           go-version: '1.16' # The Go version to download (if necessary) and use.
