--- a/.github/workflows/package-scan.yml
+++ b/.github/workflows/package-scan.yml
@@ -12,5 +12,5 @@ jobs:
   run:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # pin@v3
       - uses: ministryofjustice/opg-repository-scanner@latest
