--- a/.github/workflows/psalm-static-analysis-front.yml
+++ b/.github/workflows/psalm-static-analysis-front.yml
@@ -31,7 +31,7 @@ jobs:
         working-directory: ${{ env.SERVICE-PATH }}/app
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # pin@v3
 
       - name: Setup PHP with tools
         uses: shivammathur/setup-php@v2
