--- a/.github/workflows/tfsec.yml
+++ b/.github/workflows/tfsec.yml
@@ -27,7 +27,7 @@ jobs:
         terraform_path: [ 'terraform/environment', 'terraform/account' ]
     steps:
       - name: checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # pin@v3
         with:
           fetch-depth: 2
       - name: tfsec with pr comments
