--- a/service-front/app/phpunit.xml.dist
+++ b/service-front/app/phpunit.xml.dist
@@ -1,24 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:noNamespaceSchemaLocation="vendor/phpunit/phpunit/phpunit.xsd"
-         bootstrap="vendor/autoload.php"
-         colors="true">
-    <testsuites>
-        <testsuite name="App\\Tests">
-            <directory>./test</directory>
-        </testsuite>
-    </testsuites>
-
-    <filter>
-        <whitelist processUncoveredFilesFromWhitelist="true">
-            <directory suffix=".php">./src</directory>
-        </whitelist>
-    </filter>
-
-    <logging>
-        <log type="coverage-html" target="./build/reports/coverage-report" lowUpperBound="35"
-             highLowerBound="70"/>
-        <log type="coverage-clover" target="./build/reports/coverage.xml"/>
-        <log type="junit" target="./build/reports/results.xml"/>
-    </logging>
+<phpunit
+        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+        xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/9.3/phpunit.xsd"
+        bootstrap="vendor/autoload.php"
+        colors="true">
+  <coverage processUncoveredFiles="true">
+    <include>
+      <directory suffix=".php">./src</directory>
+    </include>
+    <report>
+      <clover outputFile="./build/reports/coverage.xml"/>
+      <html outputDirectory="./build/reports/coverage-report" lowUpperBound="35" highLowerBound="70"/>
+    </report>
+  </coverage>
+  <testsuites>
+    <testsuite name="App\\Tests">
+      <directory>./test</directory>
+    </testsuite>
+  </testsuites>
+  <logging>
+    <junit outputFile="./build/reports/results.xml"/>
+  </logging>
 </phpunit>
