--- a/.github/workflows/php-linting.yml
+++ b/.github/workflows/php-linting.yml
@@ -39,6 +39,14 @@ jobs:
         curl -OL https://squizlabs.github.io/PHP_CodeSniffer/phpcs.phar
         php phpcs.phar --version
 
+    - name: Install used standards
+      run: |
+        curl -OL https://github.com/webimpress/coding-standard/archive/refs/tags/1.2.4.tar.gz
+        curl -OL https://github.com/slevomat/coding-standard/archive/refs/tags/8.4.0.tar.gz
+        mkdir webimpress && tar -xzf 1.2.4.tar.gz -C webimpress
+        mkdir slevomat && tar -xzf 8.4.0.tar.gz -C slevomat
+        php phpcs --config-set installed_paths ./webimpress,./slevomat
+
     - uses: thenabeel/action-phpcs@v8
       with:
         files: "${{ matrix.service_path }}/**/*.php" # you may customize glob as needed
