--- a/.github/workflows/php-linting.yml
+++ b/.github/workflows/php-linting.yml
@@ -43,8 +43,8 @@ jobs:
       run: |
         curl -OL https://github.com/webimpress/coding-standard/archive/refs/tags/1.2.4.tar.gz
         curl -OL https://github.com/slevomat/coding-standard/archive/refs/tags/8.4.0.tar.gz
-        mkdir webimpress && tar -xzf 1.2.4.tar.gz -C webimpress
-        mkdir slevomat && tar -xzf 8.4.0.tar.gz -C slevomat
+        mkdir webimpress && tar -xzvf 1.2.4.tar.gz -C webimpress
+        mkdir slevomat && tar -xzvf 8.4.0.tar.gz -C slevomat
         php phpcs.phar --config-set installed_paths ./webimpress,./slevomat
 
     - uses: thenabeel/action-phpcs@v8
