--- a/.github/workflows/php-linting.yml
+++ b/.github/workflows/php-linting.yml
@@ -45,8 +45,8 @@ jobs:
         curl -OL https://github.com/slevomat/coding-standard/archive/refs/tags/8.4.0.tar.gz
         mkdir webimpress && tar -xzf 1.2.4.tar.gz -C webimpress
         mkdir slevomat && tar -xzf 8.4.0.tar.gz -C slevomat
-        php phpcs.phar --config-set installed_paths ./webimpress/coding-standard-1.2.4/src/WebImpressCodingStandard,./slevomat/coding-standard-8.4.0/SlevomatCodingStandard
-        php phpcs.phar --config-show
+        php phpcs.phar --config-set installed_paths $(pwd)/webimpress/coding-standard-1.2.4/src/WebImpressCodingStandard/,$(pwd)/slevomat/coding-standard-8.4.0/SlevomatCodingStandard/
+        php phpcs.phar -i
 
     - uses: thenabeel/action-phpcs@v8
       with:
