--- a/.github/workflows/php-linting.yml
+++ b/.github/workflows/php-linting.yml
@@ -43,9 +43,11 @@ jobs:
       run: |
         curl -OL https://github.com/webimpress/coding-standard/archive/refs/tags/1.2.4.tar.gz
         curl -OL https://github.com/slevomat/coding-standard/archive/refs/tags/8.4.0.tar.gz
-        mkdir webimpress && tar -xzf 1.2.4.tar.gz -C webimpress
-        mkdir slevomat && tar -xzf 8.4.0.tar.gz -C slevomat
-        php phpcs.phar --config-set installed_paths $(pwd)/webimpress/coding-standard-1.2.4/src/WebImpressCodingStandard/,$(pwd)/slevomat/coding-standard-8.4.0/SlevomatCodingStandard/
+        mkdir standards
+        tar -xzf 1.2.4.tar.gz -C standards
+        tar -xzf 8.4.0.tar.gz -C standards
+        php phpcs.phar --config-set installed_paths $PWD/standards/coding-standard-1.2.4/src/WebImpressCodingStandard/,$PWD/standards/coding-standard-8.4.0/SlevomatCodingStandard/
+        php phpcs.phar --config-show
         php phpcs.phar -i
 
     - uses: thenabeel/action-phpcs@v8
