--- a/.github/workflows/psalm-static-analysis-api.yml
+++ b/.github/workflows/psalm-static-analysis-api.yml
@@ -1,11 +1,15 @@
 name: Psalm Static analysis - Service API
 
+#on:
+#  pull_request:
+#    branches: [ main ]
+#    paths:
+#    # only run when service-api is changed
+#      - 'service-api/app/**'
+
+
 on:
-  pull_request:
-    branches: [ main ]
-    paths:
-    # only run when service-api is changed
-      - 'service-api/app/**'
+  workflow_call:
 
 permissions:
   actions: read
