--- a/.github/workflows/psalm-static-analysis-front.yml
+++ b/.github/workflows/psalm-static-analysis-front.yml
@@ -1,11 +1,15 @@
 name: Psalm Static analysis - Service Front
 
+#on:
+#  pull_request:
+#    branches: [ main ]
+#    paths:
+#    # only run when service-front is changed
+#      - 'service-front/app/**'
+
+
 on:
-  pull_request:
-    branches: [ main ]
-    paths:
-    # only run when service-front is changed
-      - 'service-front/app/**'
+  workflow_call:
 
 permissions:
   actions: read
