--- a/.github/workflows/pull-request-path.yml
+++ b/.github/workflows/pull-request-path.yml
@@ -10,11 +10,15 @@ defaults:
 on:
   push:
     branches:
-      - '*'              # matches every branch that doesn't contain a '/'
-      - '*/*'            # matches every branch containing a single '/'
-      - '**'             # matches every branch
-      - '!main'          # reverse match main
-      - '!dependabot/**' # reverse match dependabot PRs
+      - 'UML-2560**'
+#      - '*'              # matches every branch that doesn't contain a '/'
+#      - '*/*'            # matches every branch containing a single '/'
+#      - '**'             # matches every branch
+#      - '!main'          # reverse match main
+#      - '!dependabot/**' # reverse match dependabot PRs
+
+
+# Base permissions are better
 
 permissions:
   contents: write
@@ -38,9 +42,17 @@ jobs:
     needs:
       - branch_name
     with:
-      tag: ${{ needs.branch_name.outputs.parsed }}-${{ github.sha }}
-      branch_name: ${{ needs.branch_name.outputs.parsed }}
-      push_to_ecr: false
+      workspace: ${{ needs.branch_name.outputs.parsed }}
+
+  get_creds:
+    uses: aws-actions/configure-aws-credentials@67fbcbb121271f7775d2e7715933280b06314838 # pin@v1.7.0
+    with:
+      aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_ACTIONS }}
+      aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_ACTIONS }}
+      aws-region: eu-west-1
+      role-to-assume: arn:aws:iam::311462405659:role/opg-use-an-lpa-ci
+      role-duration-seconds: 1800
+      role-session-name: OPGUseAnLPAECRGithubAction
 
   node_test:
     if: github.actor != 'dependabot[bot]'
@@ -62,7 +74,7 @@ jobs:
     with:
       tag: ${{ needs.branch_name.outputs.parsed }}-${{ github.sha }}
       branch_name: ${{ needs.branch_name.outputs.parsed }}
-      push_to_ecr: false
+      push_to_ecr: true
     secrets: inherit
 
   terraform_plan_shared_development:
@@ -83,7 +95,7 @@ jobs:
       - terraform_lint
       - branch_name
     with:
-      workspace: ${{ needs.branch_name.outputs.parsed }}-${{ github.sha }}
+      workspace: ${{ needs.branch_name.outputs.parsed }}
       terraform_path: environment
       container_version: ${{ needs.branch_name.outputs.parsed }}-${{ github.sha }}
       apply: true
@@ -103,8 +115,8 @@ jobs:
       - seed_dynamodb
       - branch_name
     with:
-      workspace: ${{ needs.branch_name.outputs.parsed }}-${{ github.sha }}
-    secrets: inherit
+      workspace: ${{ needs.branch_name.outputs.parsed }}
+#    secrets: inherit
 
   python_templated_slack_notify:
     name: notify of result
