--- a/.github/workflows/php-linting.yml
+++ b/.github/workflows/php-linting.yml
@@ -35,13 +35,15 @@ jobs:
         fetch-depth: 2
 
     - name: Setup PHP with tools
-      uses: shivammathur/setup-php@verbose
+      uses: shivammathur/setup-php@v2
       with:
         php-version: '8.1'
         tools: squizlabs/php_codesniffer:3.7.1, webimpress/coding-standard:1.2.4, slevomat/coding-standard:8.4.0
 
     - name: Check PHPCS installation
       run: |
+        export install_dir=$HOME/.composer/vendor
+        php phpcs.phar --config-set installed_paths $install_dir/webimpress/coding-standard/src/WebimpressCodingStandard/,$install_dir/slevomat/coding-standard-8.4.0/SlevomatCodingStandard/
         phpcs --version
         phpcs -i
 
