--- a/.github/workflows/php-linting.yml
+++ b/.github/workflows/php-linting.yml
@@ -44,7 +44,7 @@ jobs:
       run: |
         export install_dir=$HOME/.composer/vendor
         phpcs --version
-        phpcs --config-set installed_paths $install_dir/webimpress/coding-standard/src/WebimpressCodingStandard/,$install_dir/slevomat/coding-standard-8.4.0/SlevomatCodingStandard/
+        phpcs --config-set installed_paths $install_dir/webimpress/coding-standard/src/WebimpressCodingStandard/,$install_dir/slevomat/coding-standard/SlevomatCodingStandard/
         phpcs -i
 
     - uses: thenabeel/action-phpcs@v8
