--- a/.github/workflows/php-linting.yml
+++ b/.github/workflows/php-linting.yml
@@ -46,7 +46,7 @@ jobs:
         phpcs --version
         phpcs --config-set installed_paths $install_dir/webimpress/coding-standard/src/WebimpressCodingStandard/,$install_dir/slevomat/coding-standard/SlevomatCodingStandard/
         phpcs -i
-        ls -lha $install_dir
+        ls -lha $install_dir/slevomat
 
     - uses: thenabeel/action-phpcs@v8
       with:
