--- a/.github/workflows/php-linting.yml
+++ b/.github/workflows/php-linting.yml
@@ -38,15 +38,14 @@ jobs:
       uses: shivammathur/setup-php@v2
       with:
         php-version: '8.1'
-        tools: squizlabs/php_codesniffer:3.7.1, webimpress/coding-standard:1.2.4, slevomat/coding-standard:8.4.0
 
     - name: Check PHPCS installation
       run: |
         export install_dir=$HOME/.composer/vendor
+        composer global require --no-interaction squizlabs/php_codesniffer:3.7.1 webimpress/coding-standard:1.2.4 slevomat/coding-standard:8.4.0
         phpcs --version
         phpcs --config-set installed_paths $install_dir/webimpress/coding-standard/src/WebimpressCodingStandard/,$install_dir/slevomat/coding-standard/SlevomatCodingStandard/
         phpcs -i
-        ls -lha $install_dir/slevomat
 
     - uses: thenabeel/action-phpcs@v8
       with:
