--- a/.github/workflows/php-linting.yml
+++ b/.github/workflows/php-linting.yml
@@ -39,7 +39,7 @@ jobs:
       with:
         php-version: '8.1'
 
-    - name: Check PHPCS installation
+    - name: Install and configure phpcs
       run: |
         export install_dir=$HOME/.composer/vendor
         composer global config --no-plugins allow-plugins.dealerdirect/phpcodesniffer-composer-installer true
