--- a/.github/workflows/php-linting.yml
+++ b/.github/workflows/php-linting.yml
@@ -34,23 +34,21 @@ jobs:
       with:
         fetch-depth: 2
 
-    - name: Install PHP_CodeSniffer
-      run: |
-        curl -OL https://squizlabs.github.io/PHP_CodeSniffer/phpcs.phar
-        php phpcs.phar --version
+    - name: Setup PHP with tools
+      uses: shivammathur/setup-php@v2
+      with:
+        php-version: '8.1'
 
-    - name: Install used standards
+    - name: Install and configure phpcs
       run: |
-        curl -OL https://github.com/webimpress/coding-standard/archive/refs/tags/1.2.4.tar.gz
-        curl -OL https://github.com/slevomat/coding-standard/archive/refs/tags/8.4.0.tar.gz
-        mkdir standards
-        tar -xzf 1.2.4.tar.gz -C standards
-        tar -xzf 8.4.0.tar.gz -C standards
-        php phpcs.phar --config-set installed_paths $PWD/standards/coding-standard-1.2.4/src/WebimpressCodingStandard/,$PWD/standards/coding-standard-8.4.0/SlevomatCodingStandard/
-        php phpcs.phar -i
+        export install_dir=$HOME/.composer/vendor
+        composer global config --no-plugins allow-plugins.dealerdirect/phpcodesniffer-composer-installer true
+        composer global require --no-interaction squizlabs/php_codesniffer:3.7.1 webimpress/coding-standard:1.2.4 slevomat/coding-standard:8.4.0
+        phpcs --version
+        phpcs -i
 
     - uses: thenabeel/action-phpcs@v8
       with:
         files: "${{ matrix.service_path }}/**/*.php" # you may customize glob as needed
-        phpcs_path: php phpcs.phar
+        phpcs_path: phpcs
         standard: ${{ matrix.service_path }}/app/phpcs.xml.dist
