--- a/service-front/app/composer.json
+++ b/service-front/app/composer.json
@@ -67,17 +67,18 @@
         "behat/behat": "^3.6",
         "cooperaj/behat-psr-extension": "^2.0",
         "filp/whoops": "^2.1.12",
-        "slevomat/coding-standard": "^8.0",
-        "webimpress/coding-standard": "^1.0",
         "laminas/laminas-development-mode": "^3.1",
         "mezzio/mezzio-tooling": "^1.0",
         "mikey179/vfsstream": "^1.6",
         "phpspec/prophecy": "^1.15",
         "phpspec/prophecy-phpunit": "^2.0",
         "phpunit/phpunit": "^9.5",
+        "psalm/plugin-phpunit": "^0.17.0",
         "roave/security-advisories": "dev-master",
+        "slevomat/coding-standard": "^8.0",
         "squizlabs/php_codesniffer": "^3.0",
-        "vimeo/psalm": "^4.19"
+        "vimeo/psalm": "^4.19",
+        "webimpress/coding-standard": "^1.0"
     },
     "replace": {
         "laminas/laminas-cache-storage-adapter-apc": "*",
